// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`connections returns my connections 1`] = `
Array [
  Object {
    "address": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
    "name": "Alice",
  },
  Object {
    "address": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc05",
    "name": "Alicia",
  },
  Object {
    "address": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
    "name": "Bob",
  },
  Object {
    "address": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc08",
    "name": "Bob",
  },
  Object {
    "address": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc04",
    "name": "Carol",
  },
  Object {
    "address": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc00",
  },
  Object {
    "address": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc03",
  },
]
`;

exports[`connections returns my connections 2`] = `Array []`;

exports[`connections returns my interaction stats 1`] = `null`;

exports[`currentAvatar returns avatar of current identity 1`] = `
Object {
  "uri": "/ipfs/avatar",
}
`;

exports[`currentAvatar returns avatar of current identity 2`] = `null`;

exports[`ownClaims returns all claims 1`] = `
Object {
  "avatar": Object {
    "uri": "/ipfs/avatar",
  },
  "banner": Object {
    "uri": "/ipfs/banner",
  },
  "connections": Object {
    "knows": Array [
      "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
      "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
      "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc03",
      "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc00",
      "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc05",
      "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc04",
      "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc08",
    ],
  },
  "description": "Always part of any transaction",
  "name": "Alice",
  "phone": "555-555-5555",
}
`;

exports[`ownClaims returns all claims 2`] = `
Object {
  "name": "Alice Kovan",
  "phone": "555-555-5555",
}
`;

exports[`publicUport returns public data as a js object 1`] = `
Object {
  "address": "2osGwhCweF72aBMFFkk59JrFHNdyG9mwrNV",
  "avatar": Object {
    "uri": "/ipfs/avatar",
  },
  "banner": Object {
    "uri": "/ipfs/banner",
  },
  "description": "Always part of any transaction",
  "name": "Alice",
  "network": "rinkeby",
  "publicEncKey": "0xf19ef47d5359e36d8fb004be6bf96591836fcdf8421fe599f7e33fd97fc8d0746bbd509d00c90a8c5860bb097e4911b133d405238d67f524d892f6c13dd9b7dc",
  "publicKey": "0xf09ef47d5359e36d8fb004be6bf96591836fcdf8421fe599f7e33fd97fc8d0746bbd509d00c90a8c5860bb097e4911b133d405238d67f524d892f6c13dd9b7dc",
}
`;

exports[`publicUport returns public data as a js object 2`] = `
Object {
  "address": "34ukSmiK1oA1C5Du8aWpkjFGALoH7nsHeDX",
  "name": "Alice Kovan",
  "network": "kovan",
}
`;

exports[`publicUportForAddress returns public data for address 1`] = `
Object {
  "publicEncKey": "0xf19ef47d5359e36d8fb004be6bf96591836fcdf8421fe599f7e33fd97fc8d0746bbd509d00c90a8c5860bb097e4911b133d405238d67f524d892f6c13dd9b7dc",
  "publicKey": "0xf09ef47d5359e36d8fb004be6bf96591836fcdf8421fe599f7e33fd97fc8d0746bbd509d00c90a8c5860bb097e4911b133d405238d67f524d892f6c13dd9b7dc",
}
`;

exports[`publicUportForAddress returns public data for address 2`] = `
Object {
  "publicEncKey": "0xf19ef47d5359e36d8fb004be6bf96591836fcdf8421fe599f7e33fd97fc8d0746bbd509d00c90a8c5860bb097e4911b133d405238d67f524d892f6c13dd9b7dc",
  "publicKey": "0xf09ef47d5359e36d8fb004be6bf96591836fcdf8421fe599f7e33fd97fc8d0746bbd509d00c90a8c5860bb097e4911b133d405238d67f524d892f6c13dd9b7dc",
}
`;

exports[`publicUportForAddress returns public data for address 3`] = `Object {}`;

exports[`publicUportMap returns public data 1`] = `
Object {
  "address": "2osGwhCweF72aBMFFkk59JrFHNdyG9mwrNV",
  "avatar": Object {
    "uri": "/ipfs/avatar",
  },
  "banner": Object {
    "uri": "/ipfs/banner",
  },
  "description": "Always part of any transaction",
  "name": "Alice",
  "network": "rinkeby",
  "publicEncKey": "0xf19ef47d5359e36d8fb004be6bf96591836fcdf8421fe599f7e33fd97fc8d0746bbd509d00c90a8c5860bb097e4911b133d405238d67f524d892f6c13dd9b7dc",
  "publicKey": "0xf09ef47d5359e36d8fb004be6bf96591836fcdf8421fe599f7e33fd97fc8d0746bbd509d00c90a8c5860bb097e4911b133d405238d67f524d892f6c13dd9b7dc",
}
`;

exports[`publicUportMap returns public data 2`] = `
Object {
  "address": "34ukSmiK1oA1C5Du8aWpkjFGALoH7nsHeDX",
  "name": "Alice Kovan",
  "network": "kovan",
}
`;

exports[`returns current identity 1`] = `
Object {
  "address": "2osGwhCweF72aBMFFkk59JrFHNdyG9mwrNV",
  "controllerAddress": "0xff708db3af14fbd9b125ac88d3f7c1c03e6bc36f",
  "deviceAddress": "0x8dd7ef5c99be7a454b4a9869683a3a394fde9777",
  "hexaddress": "0x9df0e9759b17f34e9123adbe6d3f25d54b72ad6a",
  "ipfsProfile": "IPFS_PROFILE_EG",
  "network": "rinkeby",
  "own": Object {
    "avatar": Object {
      "uri": "/ipfs/avatar",
    },
    "banner": Object {
      "uri": "/ipfs/banner",
    },
    "connections": Object {
      "knows": Array [
        "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
        "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc02",
        "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc03",
        "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc00",
        "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc05",
        "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc04",
        "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc08",
      ],
    },
    "description": "Always part of any transaction",
    "name": "Alice",
    "phone": "555-555-5555",
  },
  "publicEncKey": "0xf19ef47d5359e36d8fb004be6bf96591836fcdf8421fe599f7e33fd97fc8d0746bbd509d00c90a8c5860bb097e4911b133d405238d67f524d892f6c13dd9b7dc",
  "publicKey": "0xf09ef47d5359e36d8fb004be6bf96591836fcdf8421fe599f7e33fd97fc8d0746bbd509d00c90a8c5860bb097e4911b133d405238d67f524d892f6c13dd9b7dc",
  "pututuToken": "pututu-token-xxxx",
  "recoveryAddress": "0x1bc5cbf71b068642fc5e89c5e3d0bdb3e366bc01",
}
`;

exports[`returns current identity 2`] = `
Object {
  "address": "34ukSmiK1oA1C5Du8aWpkjFGALoH7nsHeDX",
  "deviceAddress": "0xadd7ef5c99be7a454b4a9869683a3a394fde9777",
  "network": "kovan",
  "own": Object {
    "name": "Alice Kovan",
    "phone": "555-555-5555",
  },
}
`;

exports[`validPrimaryIdentities returns all primary identities with ethr-dids 1`] = `Array []`;

exports[`validPrimaryIdentities returns all primary identities with ethr-dids 2`] = `Array []`;

exports[`validPrimaryIdentities returns all primary identities with ethr-dids 3`] = `Array []`;

exports[`validPrimaryIdentities returns all primary identities with ethr-dids 4`] = `Array []`;

exports[`validPrimaryIdentities returns all primary identities with ethr-dids 5`] = `Array []`;
